# miniradiotools

./: .gitignore  LICENSE  README.md  antenna_plotter.py  coordtransform.py  plot_traces.py  pyproject.toml  starshapes.py
biohazard_do_not_open/: GRAND_coreas_to_hdf5.py  analysis.py  copy_plots.py  coreas_to_hdf5_mods.py  fluencemap_Jelena_mods.py  fluencemap_mods.py  hdf5_library_conversion.sh  sub_analysis.sh
examples/: antenna.list  shower.list
examples/groundplane/: antenna.list
examples/showerplane/: antenna.list
examples/vxB/: shower.list
utils/: cherenkov_radius.py  coordtransform.py
